--- a/FinalChallengeApp/View/FinalChallengeApp/Base.lproj/Students.storyboard
+++ b/FinalChallengeApp/View/FinalChallengeApp/Base.lproj/Students.storyboard
@@ -153,7 +153,7 @@
                                 </constraints>
                                 <items>
                                     <navigationItem title="Add New Student" id="T6g-73-NNY">
-                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="NHb-rR-GKX">
+                                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="NHb-rR-GKX">
                                             <connections>
                                                 <action selector="doneButtonTapped:" destination="5yL-SS-DEk" id="pRl-Yu-hhU"/>
                                             </connections>
@@ -245,7 +245,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                                 <items>
                                     <navigationItem title="Student Profile" id="RqE-su-7sT">
-                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Roo-ex-QUa">
+                                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="Roo-ex-QUa">
                                             <connections>
                                                 <action selector="doneButtonTapped:" destination="jgQ-vj-COD" id="dgl-gi-BvQ"/>
                                             </connections>
@@ -887,7 +887,7 @@
                         <viewLayoutGuide key="safeArea" id="HgD-Cd-AS6"/>
                     </view>
                     <navigationItem key="navigationItem" title="Summary" id="gav-1U-bMd">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="zAr-gS-bqd">
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="save" id="zAr-gS-bqd">
                             <connections>
                                 <action selector="saveButtonTapped:" destination="rNe-Ul-54a" id="0ET-DQ-gOr"/>
                             </connections>
@@ -1012,7 +1012,7 @@
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <items>
                                                     <navigationItem title="Activity Detail" id="z4i-WN-pgS">
-                                                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="m5a-am-BWt">
+                                                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="m5a-am-BWt">
                                                             <connections>
                                                                 <action selector="doneButtonTapped:" destination="eOn-S4-O2o" id="NAT-y3-2az"/>
                                                             </connections>
@@ -1274,7 +1274,7 @@
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <items>
                                                     <navigationItem title="Activity Detail" id="77i-bU-lLa">
-                                                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="boK-mL-XMo">
+                                                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="boK-mL-XMo">
                                                             <connections>
                                                                 <action selector="doneButtonTapped:" destination="rNn-XN-T2g" id="Yo9-gq-aAe"/>
                                                             </connections>
