--- a/FinalChallengeApp/View/Materials.storyboard
+++ b/FinalChallengeApp/View/Materials.storyboard
@@ -113,7 +113,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" red="0.95686918499999996" green="0.95685130360000004" blue="0.95686346290000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="vdw-ZA-0fR">
-                                    <rect key="frame" x="0.0" y="363.5" width="414" height="0.0"/>
+                                    <rect key="frame" x="0.0" y="363" width="414" height="0.0"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 </view>
@@ -179,10 +179,10 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="addNewCell" id="zra-uJ-Aam" customClass="AddActivityTableViewCell" customModule="Stara" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="290" width="414" height="45.5"/>
+                                        <rect key="frame" x="0.0" y="290" width="414" height="45"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zra-uJ-Aam" id="37K-i8-Qk4">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="45.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="45"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="plA-SG-ffk">
@@ -194,7 +194,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add New Activity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PqV-Ul-xDK">
-                                                    <rect key="frame" x="44" y="12" width="343" height="21.5"/>
+                                                    <rect key="frame" x="44" y="12" width="343" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.72549019609999998" green="0.51764705879999995" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -971,7 +971,7 @@
         <scene sceneID="a4L-Zr-VNT">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MUY-hO-l3I" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Materials" id="uDM-M3-cbD"/>
+                    <tabBarItem key="tabBarItem" title="Materials" image="materials-inactive" selectedImage="materials-active" id="uDM-M3-cbD"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kxe-2i-VGa">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -989,6 +989,8 @@
     </scenes>
     <resources>
         <image name="Unchecked box" width="36" height="36"/>
+        <image name="materials-active" width="30" height="28"/>
+        <image name="materials-inactive" width="30" height="28"/>
         <image name="plus.circle.fill" catalog="system" width="64" height="62"/>
     </resources>
     <color key="tintColor" red="0.72549019609999998" green="0.51764705879999995" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
