--- a/FinalChallengeApp/Base.lproj/Main.storyboard
+++ b/FinalChallengeApp/Base.lproj/Main.storyboard
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="628-sI-Bge">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="628-sI-Bge">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="bpE-O5-skr">
             <objects>
-                <tabBarController id="628-sI-Bge" customClass="ViewController" customModule="FinalChallengeApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController id="628-sI-Bge" customClass="ViewController" customModule="Stara" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="I50-rv-9bQ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -29,7 +29,7 @@
         <scene sceneID="fk9-cT-daX">
             <objects>
                 <viewControllerPlaceholder storyboardName="Students" id="e6t-wx-8sf" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="stara-active" id="LdB-yG-Rsj"/>
+                    <tabBarItem key="tabBarItem" title="Students" image="Stara Icon Active" id="LdB-yG-Rsj"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vIu-wR-ypo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -39,7 +39,7 @@
         <scene sceneID="h8v-rb-W7r">
             <objects>
                 <viewControllerPlaceholder storyboardName="Materials" id="e6m-3W-fOi" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="4Z8-Zv-9ov"/>
+                    <tabBarItem key="tabBarItem" title="Materials" image="Materials active" id="4Z8-Zv-9ov"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NxT-q4-uQo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -49,7 +49,7 @@
         <scene sceneID="o2h-ZV-1YE">
             <objects>
                 <viewControllerPlaceholder storyboardName="Profile" id="JzD-Zo-axd" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="IDz-lp-Hoo"/>
+                    <tabBarItem key="tabBarItem" title="Profile" image="My Profile Active" id="IDz-lp-Hoo"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PMy-S2-8pA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -57,6 +57,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="stara-active" width="30" height="28"/>
+        <image name="Materials active" width="30" height="28"/>
+        <image name="My Profile Active" width="30" height="28"/>
+        <image name="Stara Icon Active" width="30" height="28"/>
     </resources>
 </document>
